WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65016
Web Inspector: sometimes ReceiveResponse event is attached to wrong parent.
https://bugs.webkit.org/show_bug.cgi?id=65016
Summary
Web Inspector: sometimes ReceiveResponse event is attached to wrong parent.
Ilya Tikhonovsky
Reported
2011-07-22 00:58:30 PDT
If resource load is forced by js then ReceiveResponse is attaching to FunctionCall event instead of SendRequest event.
Attachments
[patch] initial version
(28.05 KB, patch)
2011-07-22 02:26 PDT
,
Ilya Tikhonovsky
no flags
Details
Formatted Diff
Diff
[patch] initial version with binary files.
(61.51 KB, patch)
2011-07-22 02:30 PDT
,
Ilya Tikhonovsky
pfeldman
: review-
Details
Formatted Diff
Diff
[patch] second version
(47.15 KB, patch)
2011-07-22 05:41 PDT
,
Ilya Tikhonovsky
no flags
Details
Formatted Diff
Diff
[patch] third version
(47.06 KB, patch)
2011-07-22 07:25 PDT
,
Ilya Tikhonovsky
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Ilya Tikhonovsky
Comment 1
2011-07-22 02:26:06 PDT
Created
attachment 101708
[details]
[patch] initial version
Ilya Tikhonovsky
Comment 2
2011-07-22 02:30:33 PDT
Created
attachment 101709
[details]
[patch] initial version with binary files.
Pavel Feldman
Comment 3
2011-07-22 04:27:33 PDT
Comment on
attachment 101709
[details]
[patch] initial version with binary files. View in context:
https://bugs.webkit.org/attachment.cgi?id=101709&action=review
> LayoutTests/inspector/timeline/timeline-receive-response-event-expected.txt:3 > +[
We should not dump internal objects with their implementation details
Ilya Tikhonovsky
Comment 4
2011-07-22 05:41:29 PDT
Created
attachment 101720
[details]
[patch] second version
Yury Semikhatsky
Comment 5
2011-07-22 06:52:48 PDT
Comment on
attachment 101720
[details]
[patch] second version View in context:
https://bugs.webkit.org/attachment.cgi?id=101720&action=review
> Source/WebCore/inspector/front-end/TimelinePanel.js:417 > + if (!newParentRecord && record.type === recordTypes.ResourceSendRequest)
Can you get rid of this condition?
Ilya Tikhonovsky
Comment 6
2011-07-22 07:25:33 PDT
Created
attachment 101730
[details]
[patch] third version comments addressed
Ilya Tikhonovsky
Comment 7
2011-07-22 08:19:26 PDT
Comment on
attachment 101730
[details]
[patch] third version Clearing flags on attachment: 101730 Committed
r91567
: <
http://trac.webkit.org/changeset/91567
>
Ilya Tikhonovsky
Comment 8
2011-07-22 08:19:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug