Web Inspector: sometimes ReceiveResponse event is attached to wrong parent. https://bugs.webkit.org/show_bug.cgi?id=65016

Reviewed by Yury Semikhatsky.

Source/WebCore:

Test: inspector/timeline/timeline-receive-response-event.html

* inspector/InspectorTimelineAgent.cpp:
(WebCore::InspectorTimelineAgent::didInstallTimer):
(WebCore::InspectorTimelineAgent::didRemoveTimer):
(WebCore::InspectorTimelineAgent::didScheduleResourceRequest):
(WebCore::InspectorTimelineAgent::didFinishLoadingResource):
(WebCore::InspectorTimelineAgent::didTimeStamp):
(WebCore::InspectorTimelineAgent::didMarkDOMContentEvent):
(WebCore::InspectorTimelineAgent::didMarkLoadEvent):
(WebCore::InspectorTimelineAgent::appendRecord):
* inspector/InspectorTimelineAgent.h:
* inspector/front-end/TimelinePanel.js:
(WebInspector.TimelinePanel.prototype._innerAddRecordToTimeline):

LayoutTests:

* http/tests/inspector/inspector-test.js:
(initialize_InspectorTest.InspectorTest.dump):
* inspector/timeline/resources/anImage.png: Added.
* inspector/timeline/resources/anotherImage.png: Added.
* inspector/timeline/timeline-receive-response-event-expected.txt: Added.
* inspector/timeline/timeline-receive-response-event.html: Added.
* platform/chromium/inspector/timeline/timeline-receive-response-event-expected.txt: Added.

Canonical link: https://commits.webkit.org/80761@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91567 268f45cc-cd09-0410-ab3c-d52691b4dbfc